# http-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  license  project.code-workspace  readme.md  uncrustify.cfg
inc/http/: detail.h  request.h  response.h  stream.h
inc/tcp/: detail.h  server.h  stream.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/http/: request.cpp  response.cpp
src/tcp/: detail.cpp  server.cpp  stream.cpp
tests/: CMakeLists.txt
tests/example/: CMakeLists.txt  test.cpp
